syntax = "proto3";

package ai.metathings.service.deviced;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message GetFlowSetRequest {
	OpFlowSet flow_set = 1 [(validator.field) = {msg_exists: true}];
}

message GetFlowSetResponse {
	FlowSet flow_set = 1;
}
